--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ facebook_url:
 github_url:
 gitlab_url: 
 googleplus_url: 
-instagram_url: https://instagram.com
+instagram_url: https://www.instagram.com/palvibhat/
 linkedin_url: 
 pinterest_url:
 slack_url:
